Fix drag shadow not visible when dragging a file on a narrow screen
When a file from the file list is dragged a drag shadow (a copy of the
file row that follows the cursor position) is created. The drag shadow
element is created as a direct child of the body element, so it needs a
higher "z-index" than the one used for the file list to be visible.

In narrow screens the "#app-content" uses a "z-index" of 1000 in order
to be visible over the "#navigation-bar" when they overlap, so the
"z-index" of the drag shadow must be at least 1000 to be visible over
the file list.

Instead of updating the hardcoded "z-index" it was removed and replaced
by CSS rules for ".dragshadow" elements to ease theming.

--- a/apps/files/css/files.scss
+++ b/apps/files/css/files.scss
@@ -649,6 +649,7 @@ table tr.summary td {
 
 table.dragshadow {
 	width:auto;
+	z-index: 100;
 }
 table.dragshadow td.filename {
 	padding-left:60px;
